remove yellow background for right-aligned image on test page

--- a/MainTest/index.html
+++ b/MainTest/index.html
@@ -19,7 +19,7 @@
     <img src="img/thumb.gif" data-izin="img/thumb.gif" />
 
     <p>right:</p>
-    <p style="text-align: right; background:yellow;">
+    <p style="text-align: right;">
         <img src="img/normal1.gif" width="250" data-izin="" />
     </p>
 
