fix image-loading error

--- a/Dev/index.html
+++ b/Dev/index.html
@@ -2,7 +2,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title>test...</title>
-    <link href="css/izin.css" rel="stylesheet" />
 </head>
 <body>
 
@@ -102,6 +101,8 @@
 
     <script src="lib/jquery/jquery-1.10.2.min.js"></script>
 
+    <script src="js/izinEnv.js"></script>
+    <script src="js/addCss.js"></script>
     <script src="js/Rect.js"></script>
     <script src="js/ZoomPopup.js"></script>
     <script src="js/getImageNaturalSize.js"></script>
@@ -109,7 +110,6 @@
     <script src="js/ZoomBackground.js"></script>
     <script src="js/calcResizedHeight.js"></script>
     <script src="js/my-underscore.js"></script>
-
     <script src="cursor-zoom/cursor-zoom.js"></script>
 
     <script src="js/main.js"></script>
